// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero block renders a hero component 1`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper color-bg-primary full-width"
  >
    <div
      className="hero-block-image"
      style={Object {}}
    />
    
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className=""
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 2`] = `
<div
  className="eea hero-block color-bg-primary inverted full-height"
>
  <div
    className="hero-block-image-wrapper"
  >
    <div
      className="hero-block-image"
      style={Object {}}
    />
    
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className=""
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 3`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper"
  >
    <div
      className="hero-block-image"
      style={
        Object {
          "backgroundImage": "url(url_url)",
        }
      }
    />
    <div
      className="hero-block-image-overlay dark-overlay-4"
    />
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className=""
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 4`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper"
  >
    <div
      className="hero-block-image"
      style={
        Object {
          "backgroundImage": "url(/foo/bar/@@images/image/huge)",
        }
      }
    />
    <div
      className="hero-block-image-overlay dark-overlay-4"
    />
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className=""
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 5`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper"
  >
    <div
      className="hero-block-image"
      style={
        Object {
          "backgroundImage": "url(/foo/bar.gif/@@images/image)",
        }
      }
    />
    <div
      className="hero-block-image-overlay dark-overlay-4"
    />
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className="quoted-wrapper"
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 6`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper full-width"
  >
    <div
      className="hero-block-image"
      style={
        Object {
          "backgroundImage": "url(/foo/bar.gif/@@images/image)",
        }
      }
    />
    <div
      className="hero-block-image-overlay dark-overlay-4"
    />
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className="quoted-wrapper"
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero block renders a hero component 7`] = `
<div
  className="eea hero-block inverted full-height"
>
  <div
    className="hero-block-image-wrapper full-width"
  >
    <div
      className="hero-block-image"
      style={
        Object {
          "backgroundImage": "url(/foo/bar.gif/@@images/image)",
        }
      }
    />
    <div
      className="hero-block-image-overlay dark-overlay-4"
    />
  </div>
  <div
    className="hero-block-inner-wrapper d-flex flex-items-center"
  >
    <div
      className="hero-block-body"
    >
      <div
        className="hero-block-text color-fg-white text-left"
      >
        <div
          className="quoted-wrapper"
        >
          Text test
        </div>
      </div>
      <div
        className="hero-block-meta text-left"
      >
        Test meta
      </div>
    </div>
  </div>
</div>
`;
